fix(ci): resolve CI failures
- Pin Bazel to 9.0.0 (was 9.0.0rc3)
- Add rules_foreign_cc 0.14.0 override for Bazel 9.x compatibility
- Fix skyconfig test: explicitly clear CI env var for "without CI" test
- Make govulncheck accept stdlib-only vulnerabilities (exit code 3)

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -17,6 +17,9 @@ bazel_dep(name = "aspect_rules_lint", version = "2.0.0-beta.1")
 
 bazel_dep(name = "buildifier_prebuilt", version = "8.0.3", dev_dependency = True)
 
+# Override rules_foreign_cc for Bazel 9.x compatibility (transitive dep from aspect_rules_lint)
+bazel_dep(name = "rules_foreign_cc", version = "0.14.0")
+
 # Copybara rules (dogfooding)
 bazel_dep(name = "rules_copybara", version = "0.0.0", dev_dependency = True)
 git_override(
